Convert fire button to mobile ultimate + rebalance enemy speeds with level scaling

--- a/index.html
+++ b/index.html
@@ -214,8 +214,11 @@
                     <div id="joystickStick" class="joystick-stick"></div>
                 </div>
                 
-                <!-- Fire Button -->
-                <button id="fireButton" class="fire-button">🔥</button>
+                <!-- Ultimate Button (Mobile) -->
+                <button id="fireButton" class="fire-button mobile-ultimate-btn">
+                    <div class="mobile-ultimate-icon">💥</div>
+                    <div class="mobile-ultimate-label">ULT!</div>
+                </button>
             </div>
         </div>
 
