--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=20260220"></script>
     <script>
         // Register Service Worker for PWA
         if ('serviceWorker' in navigator) {
