--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </div>
     </div>
 
-    <script src="script.js?v=20260220d"></script>
+    <script src="script_v2.js"></script>
     <script>
         // Register Service Worker for PWA
         if ('serviceWorker' in navigator) {
