--- a/index.html
+++ b/index.html
@@ -385,6 +385,12 @@
         </div>
     </div>
 
+    <!-- Sound Toggle Button (top-right, global) -->
+    <button id="soundToggleBtn" class="sound-toggle-btn" title="Toggle Sound" style="position:fixed;top:16px;right:16px;z-index:1000;display:flex;align-items:center;gap:4px;font-size:1.2em;">
+        <span id="soundToggleIcon">🔊</span>
+        <span id="soundToggleLabel">Sound On</span>
+    </button>
+
     <script src="script_v2.js"></script>
     <script>
         // Register Service Worker for PWA
